--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@types/lodash": "^4.17.7",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
