--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "zustand": "^4.5.4"
   },
